--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,170 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: merriweather, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+    --lightgray: #DBCFCC;
+    --lightblue: #7A9FCD;
+    --brown: #512C39;
+    --orange: #D68B4D;
+    --baseFont: 15px;
+    --position--left: 12em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+    background-image: url("assets/TilesPortugal.jpg");
+    background-repeat: repeat;
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    margin: 0 auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.page {
+    background-color: var(--orange);
+    padding: 2em 2em 4em 2em;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
-.App-link {
-  color: #61dafb;
+.page--flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.block {
+    border: transparent;
+    border-radius: 0.5em;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.15);
+    padding: 1em;
+}
+
+.block__orange {
+    background-color: var(--orange);
+}
+
+/*css on page where left text and right photo................*/
+.left-side {
+    margin-left: 1em;
+    padding: 1em;
+    margin-bottom: 2em;
+    border-radius: 0.5em;
+    background-color: var(--orange);
+}
+
+.right-side {
+    padding: 1em;
+    margin-bottom: 2em;
+    border-radius: 0.5em;
+    background-color: var(--orange);
+}
+
+.side__30 {
+    width: 30vw;
+}
+
+.side__40 {
+    width: 40vw;
+}
+
+.side__50 {
+    width: 50vw;
+}
+
+.side__60 {
+    width: 60vw;
+}
+
+/*photo.....................................................*/
+.photo {
+    width: 100%;
+    padding: 1em;
+}
+
+.photo-caption {
+    color: black;
+    font-size: calc(var(--baseFont) * 0.8);
+    margin-left: 1.5em;
+}
+
+/*font-size.................................................*/
+h1 {
+    font-size: calc(var(--baseFont) * 1.6);
+    margin_top: 1em;
+    margin-bottom: 1em;
+}
+
+h2 {
+    font-size: calc(var(--baseFont) * 1.4);
+    padding-bottom: 0.5em;
+}
+
+h3 {
+    font-size: calc(var(--baseFont) * 1.2);
+    /*padding-top: 0.5em;*/
+    padding-bottom: 0.5em;
+}
+
+p {
+    font-size: var(--baseFont);
+    line-height: 1.5em;
+    margin-bottom: 1em;
+}
+
+li {
+    font-size: var(--baseFont);
+    line-height: 1.6em;
+}
+
+.line-through {
+    text-decoration-line: line-through;
+}
+
+/*anchor tags.................................................*/
+a {
+    color: black;
+}
+
+/*margin.....................................................*/
+.margin-top1 {
+    margin-top: 1em;
+}
+
+.margin-top2 {
+    margin-top: 2em;
+}
+
+.margin-bottom1 {
+    margin-bottom: 1em;
+}
+
+.margin-bottom2 {
+    margin-bottom: 2em;
+}
+
+.margin-left1 {
+    margin-left: 1em;
+}
+
+.margin-left16 {
+    margin-left: 1.6em;
+}
+
+.margin-right1 {
+    margin-right: 1em;
+}
+
+/*attention.................................................*/
+.attention {
+    margin-top: 1em;
+    margin-bottom: 2em;
+    color: black;
 }
